[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hex = { workspace = true }
consensus = { path = "../consensus" }
trng = { path = "../trng" }